# pigs

./: .gitignore  .pigsignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.toml
.aris/: installed-skills-codex.txt
.pigs/: config.toml  pig.toml
.pigs/rules/: rust-style.md
.zcode/plans/: plan-api.md  plan-sess_2916a7ad-c8f8-44c6-8ef0-5eaed563ca1f.md  plan-sess_4af7ce42-4070-43f5-8891-55a8bf81115c.md  plan-sess_7fb6701e-d4ff-4328-845b-ee60310d80a4.md  plan-sess_937c4e6c-9253-42aa-8885-45f9359e6c6e.md  plan-sess_a941ca9f-1bd2-4bc8-8e1d-7ce8aac8aeb2.md  plan-sess_e11f579f-5635-4468-b6c2-ad3d0c063781.md
crates/pigs/: Cargo.toml  README.md
crates/pigs-api/: Cargo.toml  README.md
crates/pigs-api/src/: continuation.rs  format.rs  http_runtime.rs  lib.rs  orchestration.rs  output.rs  phased_api_convert.rs  phased_markers.rs  phased_phase.rs  phased_prompts.rs  phased_runtime.rs  phased_tools.rs  protocol.rs  server.rs  transport.rs
crates/pigs-api/tests/: http_runtime.rs  orchestration.rs  output.rs  protocol_codec.rs
crates/pigs-cli/: Cargo.toml  README.md
crates/pigs-cli/src/: agent.rs  agent_tool.rs  cli.rs  command_aliases.rs  commands.rs  doctor.rs  hooks.rs  http_client.rs  i18n.rs  lib.rs  models.rs  output.rs  repl.rs  skill_tool.rs  snapshots.rs  sub_agent.rs  sub_agent_tool.rs  tui_repl.rs
crates/pigs-cli/tests/: cli_smoke.rs
crates/pigs-config/: Cargo.toml  README.md
crates/pigs-config/src/: agents_md.rs  config.rs  language.rs  lib.rs  memory.rs  rules.rs  skills.rs  sub_agent_def.rs
crates/pigs-core/: Cargo.toml  README.md
crates/pigs-core/src/: api.rs  lib.rs  message.rs  tool.rs  usage.rs
crates/pigs-llm/: Cargo.toml  README.md
crates/pigs-llm/src/: anthropic.rs  http_util.rs  lib.rs  openai.rs  openai_responses.rs  provider.rs
crates/pigs-mcp/: Cargo.toml  README.md
crates/pigs-mcp/src/: client.rs  error.rs  lib.rs  protocol.rs  tool_bridge.rs
crates/pigs-mini-agent/: Cargo.toml  README.md
crates/pigs-mini-agent/docs/: 00-overview.md  01-message.md  02-tool.md  03-prompt.md  04-llm.md  05-tools.md  06-agent.md  07-error.md
crates/pigs-mini-agent/docs/_walkthroughs/: 01-message.md  02-tool.md  03-prompt.md  04-llm.md  05-tools.md  06-agent.md  07-error.md
crates/pigs-mini-agent/docs/html/: 01-message.html  02-tool.html  03-prompt.html  04-llm.html  05-tools.html  06-agent.html  07-error.html  index.html
crates/pigs-mini-agent/docs/html/assets/: app.js  style.css
crates/pigs-mini-agent/examples/: chat.rs
crates/pigs-mini-agent/src/: agent.rs  error.rs  lib.rs  llm.rs  message.rs  prompt.rs  tool.rs
crates/pigs-mini-agent/src/tools/: bash.rs  edit_file.rs  mod.rs  read_file.rs  write_file.rs
crates/pigs-permissions/: Cargo.toml  README.md
crates/pigs-permissions/src/: lib.rs  mode.rs  policy.rs  prompter.rs
crates/pigs-prompts/: Cargo.toml  README.md
crates/pigs-prompts/prompts/: executor_en.txt  executor_user_en.txt  executor_user_zh.txt  executor_zh.txt  post_en.txt  post_user_en.txt  post_user_zh.txt  post_zh.txt  pre_en.txt  pre_user_en.txt  pre_user_zh.txt  pre_zh.txt
crates/pigs-prompts/src/: lib.rs
crates/pigs-proxy/: Cargo.toml  README.md  config.example.toml
crates/pigs-proxy/src/: compaction.rs  config.rs  lib.rs  log.rs  loopback.rs  protocol.rs  proxy_client.rs  retry.rs  server.rs  upstream.rs
crates/pigs-proxy/tests/: http_loopback.rs
crates/pigs-session/: Cargo.toml  README.md
crates/pigs-session/src/: compact.rs  lib.rs  session.rs
crates/pigs-tools/: Cargo.toml  README.md
crates/pigs-tools/src/: apply_patch.rs  ask_user.rs  bash.rs  edit_file.rs  git_diff.rs  glob.rs  grep.rs  http_request.rs  ignore.rs  lib.rs  list_files.rs  read_file.rs  sleep.rs  todo_write.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/pigs-tui/: Cargo.toml  TESTING.md
crates/pigs-tui/src/: app.rs  chat.rs  editor.rs  event.rs  extensions.rs  footer.rs  header.rs  image.rs  lib.rs  markdown.rs  overlay.rs  tests.rs  theme.rs  tool_display.rs
crates/pigs/docs/: 理解与规划.md
crates/pigs/src/: main.rs  server.rs
docs/: agent-design.md  sub-agent-design.md  参考项目分析.md  论文规划.md  重构pigs-api.md
paper/: NARRATIVE_REPORT.md  main.aux  main.bbl  main.blg  main.out
paper/Conference/: BASELINE.md  CITATION_AUDIT.md  KILL_ARGUMENT.md  KNOWN_WEAKNESSES.md  PAPER_CLAIM_AUDIT.md  PAPER_IMPROVEMENT_LOG.md  PROOF_AUDIT.md  RESUBMIT_REPORT.json  RESUBMIT_REPORT.md  comment.cut  main.tex  references.bib
paper/Conference/.aris/: DIFF_REPORT.md  edit_whitelist.yaml
paper/Conference/.aris/review_corpus/: reviewer_1.txt  reviewer_2.txt  reviewer_3.txt
paper/Conference/.aris/snapshots/round-0/: background.tex  conclusion.tex  discussion.tex  introduction.tex  main.tex  related.tex
paper/Conference/.aris/snapshots/round-1/: design.tex  experiments.tex  implementation.tex  results.tex
paper/Conference/sections/: appendix.tex  background_clean.tex  conclusion.tex  design.tex  discussion.tex  experiments.tex  implementation.tex  introduction.tex  related.tex  results.tex
paper/experimental/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/experimental/sections/: conclusion.tex  experiments.tex  introduction.tex  method.tex  related.tex  results.tex
paper/system-design/: main.tex  references.bib
paper/system-design/sections/: background.tex  design.tex  discussion.tex  implementation.tex  introduction.tex  related.tex
scripts/: harden_llm_protocols.py  patch_lang_commands.py  patch_multi_model.py  patch_openai_responses.py  patch_server_sse.py  refactor_shared_api_convert.py  update_reference_docs.py  wire_skill_tool.py  write_server_api_convert.py
skills/: code-review.md
