[workspace]
members = [
    "crates/pigs-core",
    "crates/pigs-llm",
    "crates/pigs-tools",
    "crates/pigs-permissions",
    "crates/pigs-session",
    "crates/pigs-config",
    "crates/pigs-mcp",
    "crates/pigs-cli",
    "crates/pigs-prompts",
    "crates/pigs-api",
    "crates/pigs-proxy",
    "crates/pigs",
    # Teaching-only crate (self-contained mini agent). Not part of the product runtime.
    "crates/pigs-mini-agent",
]
# `cargo run` / `cargo run -r` in the workspace root should launch the product binary.
default-members = ["crates/pigs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# Internal crates
pigs-core = { path = "crates/pigs-core" }
pigs-llm = { path = "crates/pigs-llm" }
pigs-tools = { path = "crates/pigs-tools" }
pigs-permissions = { path = "crates/pigs-permissions" }
pigs-session = { path = "crates/pigs-session" }
pigs-config = { path = "crates/pigs-config" }
pigs-mcp = { path = "crates/pigs-mcp" }
pigs-cli = { path = "crates/pigs-cli" }
pigs-prompts = { path = "crates/pigs-prompts" }
pigs-api = { path = "crates/pigs-api" }
pigs-proxy = { path = "crates/pigs-proxy" }
pigs = { path = "crates/pigs" }

# External dependencies
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rustyline = "14"
clap = { version = "4", features = ["derive"] }
regex = "1"
glob = "0.3"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
uninlined_format_args = "warn"
needless_borrow = "warn"
redundant_clone = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
