[package]
name = "pigs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Legacy local agent modules as a library only; product binary is pigs"

[lib]
name = "pigs_cli"
path = "src/lib.rs"


[dependencies]
pigs-core = { workspace = true }
pigs-llm = { workspace = true }
pigs-tools = { workspace = true }
pigs-permissions = { workspace = true }
pigs-session = { workspace = true }
pigs-config = { workspace = true }
pigs-mcp = { workspace = true }
pigs-prompts = { workspace = true }
pigs-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
