[package]
name = "pigs-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pigs-core = { workspace = true }
pigs-permissions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
