[package]
name = "pigs-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Minimal MCP client (stdio JSON-RPC) for Pigs Agent"

[dependencies]
pigs-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
