[package]
name = "pigs-mini-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "教学版最简 Rust AI Agent —— 一个自包含的通用 Agent crate，用于理解 Agent 循环的核心原理"

[lib]
name = "pigs_mini_agent"
path = "src/lib.rs"

[dependencies]
# 异步运行时 —— Agent 循环和工具执行都需要异步
tokio = { workspace = true }
# HTTP 客户端 —— 调用 LLM API
reqwest = { workspace = true }
# 序列化/反序列化 —— 消息和工具参数的 JSON 处理
serde = { workspace = true }
serde_json = { workspace = true }
# 异步 trait —— Tool trait 的 async fn 需要
async-trait = { workspace = true }
# 错误类型派生 —— 用 thiserror 自动实现 Display 和 From
thiserror = { workspace = true }

[dev-dependencies]
# 临时文件/目录 —— 工具测试需要创建临时文件
tempfile = "3"
# 测试用异步运行时
tokio = { workspace = true, features = ["test-util"] }
