[package]
name = "pigs-permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pigs-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
