[package]
name = "pigs-session"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pigs-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
