[package]
name = "pigs-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pigs-core = { workspace = true }
pigs-permissions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
